package au.com.codeka.warworlds.server.ctrl;

import java.sql.Statement;
import java.util.ArrayList;
import java.util.List;

import org.joda.time.DateTime;
import org.joda.time.DateTimeZone;

import au.com.codeka.common.Wire;
import au.com.codeka.common.protobuf.BuildRequest;
import au.com.codeka.common.protobuf.SituationReport;
import au.com.codeka.common.protobuf.SituationReportFilter;
import au.com.codeka.warworlds.server.RequestException;
import au.com.codeka.warworlds.server.data.SqlResult;
import au.com.codeka.warworlds.server.data.SqlStmt;
import au.com.codeka.warworlds.server.data.Transaction;

import com.google.common.io.BaseEncoding;

public class SituationReportController {
    private DataBase db;

    public SituationReportController() {
        db = new DataBase();
    }
    public SituationReportController(Transaction trans) {
        db = new DataBase(trans);
    }

    public void saveSituationReport(SituationReport sitrep_pb) throws RequestException {
        try {
            int sitrepID = db.saveSituationReport(sitrep_pb);

            SituationReport new_sitrep_pb = new SituationReport.Builder(sitrep_pb)
                    .key(Integer.toString(sitrepID))
                    .build();

            int empireID = Integer.parseInt(new_sitrep_pb.empire_key);
            String base64 = BaseEncoding.base64().encode(new_sitrep_pb.toByteArray());
            new NotificationController().sendNotificationToEmpire(empireID, "sitrep", base64);
        } catch (Exception e) {
            throw new RequestException(e);
        }
    }

    public List<SituationReport> fetch(Integer empireID, Integer starID, DateTime before,
                DateTime after, SituationReportFilter filter, int limit) throws RequestException {
        try {
            return db.fetch(empireID, starID, before, after, filter, limit);
        } catch(Exception e) {
            throw new RequestException(e);
        }
    }

    private static int getEventKinds(SituationReport sitrep) {
        int kinds = 0;
        if (sitrep.build_complete_record != null && sitrep.build_complete_record.design_id != null) {
            kinds += 1 << SituationReportFilter.BuildCompleteAny.getValue();
            if (sitrep.build_complete_record.build_kind == BuildRequest.BUILD_KIND.BUILDING) {
                kinds += 1 << SituationReportFilter.BuildCompleteBuilding.getValue();
            } else {
                kinds += 1 << SituationReportFilter.BuildCompleteShips.getValue();
            }
        }
        if (sitrep.move_complete_record != null && sitrep.move_complete_record.fleet_key != null) {
            kinds += 1 << SituationReportFilter.MoveComplete.getValue();
        }
        if (sitrep.fleet_under_attack_record != null && sitrep.fleet_under_attack_record.fleet_key != null) {
            kinds += 1 << SituationReportFilter.FleetAttacked.getValue();
        }
        if (sitrep.fleet_destroyed_record != null && sitrep.fleet_destroyed_record.fleet_design_id != null) {
            kinds += 1 << SituationReportFilter.FleetDestroyed.getValue();
        }
        if (sitrep.fleet_victorious_record != null && sitrep.fleet_victorious_record.fleet_key != null) {
            kinds += 1 << SituationReportFilter.FleetVictorious.getValue();
        }
        if (sitrep.colony_attacked_record != null && sitrep.colony_attacked_record.colony_key != null) {
            kinds += 1 << SituationReportFilter.ColonyAttacked.getValue();
        }
        if (sitrep.colony_destroyed_record != null && sitrep.colony_destroyed_record.colony_key != null) {
            kinds += 1 << SituationReportFilter.ColonyDestroyed.getValue();
        }

        return kinds;
    }

    private static class DataBase extends BaseDataBase {
        public DataBase() {
            super();
        }
        public DataBase(Transaction trans) {
            super(trans);
        }

        public int saveSituationReport(SituationReport sitrep_pb) throws Exception {
            String sql = "INSERT INTO situation_reports (empire_id, star_id, report_time, report, event_kinds)" +
                        " VALUES (?, ?, ?, ?, ?)";
            try (SqlStmt stmt = prepare(sql, Statement.RETURN_GENERATED_KEYS)) {
                stmt.setInt(1, Integer.parseInt(sitrep_pb.empire_key));
                stmt.setInt(2, Integer.parseInt(sitrep_pb.star_key));
                stmt.setDateTime(3, new DateTime(sitrep_pb.report_time * 1000, DateTimeZone.UTC));
                stmt.setBytes(4, sitrep_pb.toByteArray());
                stmt.setInt(5, getEventKinds(sitrep_pb));
                stmt.update();

                return stmt.getAutoGeneratedID();
            }
        }

        public List<SituationReport> fetch(Integer empireID, Integer starID, DateTime before,
                DateTime after, SituationReportFilter filter, int limit) throws Exception {
            String sql = "SELECT report, report_time" +
                        " FROM situation_reports" +
                        " WHERE report_time < ?" +
                        (after == null ? "" : " AND report_time > ?") +
                        (empireID == null ? "" : " AND empire_id = ?") +
                        (starID == null ? "" : " AND star_id = ?") +
                        (filter == null || filter == SituationReportFilter.ShowAll ? "" : " AND event_kinds & ? > 0") +
                        " ORDER BY report_time DESC" +
                        " LIMIT "+limit;
            try (SqlStmt stmt = prepare(sql)) {
                stmt.setDateTime(1, before);
                int i = 2;
                if (after != null) {
                    stmt.setDateTime(i, after);
                    i++;
                }
                if (empireID != null) {
                    stmt.setInt(i, empireID);
                    i++;
                }
                if (starID != null) {
                    stmt.setInt(i, starID);
                    i++;
                }
                if (filter != null && filter != SituationReportFilter.ShowAll) {
                    stmt.setInt(i, 1 << filter.getValue());
                    i++;
                }
                SqlResult res = stmt.select();

                ArrayList<SituationReport> reports = new ArrayList<>();
                while (res.next()) {
                    reports.add(Wire.i.parseFrom(res.getBytes(1), SituationReport.class));
                }
                return reports;
            }
        }
    }
}
